<resources>
    <!-- Preference -->
    <string name="setting_invert_rotation_sidestep">Swap turn controls</string>
    <string name="setting_invert_summary_off">Main joystick left-right controls rotation; secondary joystick controls sidestep.</string>
    <string name="setting_invert_summary_on">Main joystick left-right controls sidestep; secondary joystick controls rotation.</string>

    <!-- main -->
    <string name="app_name">Ragnetto</string>
    <string name="ragnetto_settings_activity_title">Settings</string>
    <string name="ragnetto_config_activity_title">Tuning</string>

    <!-- menu -->
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="sensor">Gesture control</string>
    <string name="tuning">Configure robot</string>
    <string name="settings">App settings</string>

    <!-- notification -->
    <string name="notification_title">Ragnetto is running</string>
    <string name="notification_text">Tap to open Ragnetto app</string>

    <!-- toast -->
    <string name="toast_connected">Connected to Ragnetto</string>
    <string name="toast_disconnected">Ragnetto disconneted</string>
    <string name="toast_unable_to_connected">Failed to connect!</string>
    <string name="toast_communication_error">Warning: bluetooth communication error: "%1$s"</string>

    <!-- command modes -->
    <string-array name="modes">
        <item>Calibration 1</item>
        <item>Calibration 2</item>
        <item>Stance</item>
        <item>Joystick walk</item>
    </string-array>

    <!-- configuration -->
    <string name="config_trim_joint_title">Leg %1$d, joint %2$d</string>
    <string name="config_trim_plus_button">+</string>
    <string name="config_trim_minus_button">-</string>
    <string name="config_tuning_title">Parameters tuning</string>
    <string name="config_trims_title">Leg trims</string>
    <string name="config_height_offset">Height offset (mm)</string>
    <string name="config_lift_height">Leg lift height (mm)</string>
    <string name="config_max_walk_phase_duration">Max walk stride duration (ms)</string>
    <string name="config_leg_lift_duration">Leg lift duration (%)</string>
    <string name="config_leg_drop_duration">Leg drop duration (%)</string>
    <string name="config_save">Save configuration to EEPROM</string>
    <string name="config_reload">Reload configuration from EEPROM</string>
    <string name="config_defaults">Use default values</string>
    <string name="config_not_yet_implemented">Not yet implemented in firmware!</string>

    <!-- other -->
    <string name="bt_not_available_title">Bluetooth not available</string>
    <string name="bt_not_available_text">Bluetooth is not available on this device.</string>
    <string name="bt_not_available_ok">Damn!</string>
    <string name="bt_select_title">Select paired device</string>
    <string name="bt_no_paired_device_title">No paired device</string>
    <string name="bt_no_paired_device_text">Please pair a Ragnetto device using Android bluetooth options before connecting.</string>
    <string name="bt_no_paired_device_ok">Ok</string>


</resources>
