<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/mi_connect"
        android:icon="@drawable/ic_connect"
        android:onClick="onMenuClickConnect"
        android:title="@string/connect"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/mi_sensor"
        android:icon="@drawable/ic_sensor"
        android:onClick="onMenuClickSensor"
        android:title="@string/sensor"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/mi_tuning"
        android:icon="@drawable/ic_tuning"
        android:onClick="onMenuClickTuning"
        android:title="@string/tuning"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/mi_settings"
        android:icon="@drawable/ic_settings"
        android:onClick="onMenuClickSettings"
        android:title="@string/settings"
        app:showAsAction="never" />
</menu>